[build-system]
requires = ["setuptools>=70", "setuptools-scm>8.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "pyvmt"
dynamic = ["version"]
authors = [
  { name="PyVmt team", email="fm@fbk.eu" },
]
maintainers = [
  { name="Alberto Griggio", email = "griggio@fbk.eu" },
]
description = "Library to create and check finite and infinite state transition systems"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = "Apache-2.0"
dependencies = [
    "PySMT>=0.9.6",
]

[project.urls]
Homepage = "http://vmt-lib.org"
Repository = "https://github.com/pyvmt/pyvmt.git"
Issues = "https://github.com/pyvmt/pyvmt/issues"

[dependency-groups]
dev = [
    "pytest",
    "build",
]
