[metadata]
name = pyvmt
version = 0.0.1
author = PyVmt team
author_email = agirardi@fbk.eu
description = Library to create and check finite and infinite state transition systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyvmt/pyvmt
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
packages = find:
python_requires = >=3.6
install_requires =
    pysmt

[options.packages.find]
where = src
